# tanjiro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  gateway.yml
database/: Cargo.toml
database/migrations/: 20241026125026_init.down.sql  20241026125026_init.up.sql
database/src/: main.rs
gateway/: Cargo.toml  Dockerfile
gateway/src/: handle_events.rs  main.rs  structs.rs
gateway/src/commands/: hello.rs  mod.rs  ping.rs
gateway/src/commands/settings/: mod.rs  set_default_channel.rs
gateway/src/handlers/: message_delete.rs  mod.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/queries/: mod.rs
models/src/queries/guild/: mod.rs
models/src/queries/guild_config/: mod.rs
