[package]
name = "database"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["postgres", "migrate", "uuid"] }
tokio = "1.41.0"
