[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
twilight-gateway = { version = "0.15.4", features = ["twilight-http"] }
twilight-http = "0.15.4"
tracing = "0.1.40"
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
serde_json = "1.0.132"
twilight-model = "0.15.4"
