[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
twilight-gateway = { version = "0.15.4", features = ["twilight-http"] }
twilight-http = "0.15.4"
tracing = "0.1.40"
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
serde_json = "1.0.132"
twilight-model = "0.15.4"
twilight-cache-inmemory = "0.15.4"
vesper = { git = "https://github.com/AlvaroMS25/vesper", branch = "master", version = "0.13.0" }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std", "tls-rustls"] }
sea-query = "0.32.0"

models = { path = "../models" }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
futures = "0.3.31"
